display bugs on mobile version for legal notice and food details pages

--- a/pur_beurre/accounts/static/accounts/css/style.css
+++ b/pur_beurre/accounts/static/accounts/css/style.css
@@ -4,6 +4,10 @@
     border-color:#f4623a;
 }
 
+.notice {
+    font-size:80%
+}
+
 .legal {
     background-color: #86ebe6;
 }
